rework on mock interfaces
